--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,15 @@
 # * https://www.objc.io/issues/6-build-tools/travis-ci/
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode7.3
+osx_image: xcode9.3
 language: swift
 cache: cocoapods
 podfile: Example/Podfile
+xcode_workspace: SwiftDog.xcworkspace
+xcode_scheme: SwiftDog-Example
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 - pod repo update
 - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/SwiftDog.xcworkspace -scheme SwiftDog-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
