--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ before_install:
 - pod repo update
 - pod install --project-directory=Example
 script:
-    - xcodebuild clean test -sdk iphonesimulator -workspace Example/SwiftDog.xcworkspace -scheme SwiftDog-Example CODE_SIGNING_REQUIRED=NO
+    - set -o pipefail && xcodebuild clean test -workspace Example/SwiftDog.xcworkspace -scheme SwiftDog-Example -destination "platform=iOS Simulator,name=iPhone 8,OS=11.3" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO | xcpretty
 after_script:
 - pod lib lint
