--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,21 @@ podfile: Example/Podfile
 xcode_workspace: SwiftDog.xcworkspace
 xcode_scheme: SwiftDog-Example
 xcode_sdk: iphonesimulator11.3
+
+branches:
+  only:
+    - dev
+    - master
+
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 - gem install xcpretty -N
 - pod repo update
 - pod install --project-directory=Example
+
 script:
 - set -o pipefail
-- travis_retry xcodebuild -workspace Example/SwiftDog.xcworkspace -scheme SwiftDog-Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 8,OS=11.3' CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO clean test | xcpretty -c
+- travis_retry xcodebuild -workspace Example/SwiftDog.xcworkspace -scheme SwiftDog-Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 8,OS=11.3' CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO | xcpretty -c
+
 after_script:
 - pod lib lint
