Changed notification settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,13 @@ branches:
     - dev
     - master
 
+notifications:
+  email:
+    recipients:
+      - jacobaronoff45@gmail.com
+    on_success: never # default: change
+    on_failure: always # default: always
+
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 - gem install xcpretty -N
