--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ DerivedData
 
 Carthage/Build
 
+# Swift Package Manager
+.build
+
 # We recommend against adding the Pods directory to your .gitignore. However
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
